# cds-gtrends-etl

./: .env.example  AGENTS.md  README.md  pyproject.toml
migrations/: 001_create_current_trends.sql  002_daily_trend_upsert.sql  003_rebucket_trend_date_local_tz.sql  006_add_country_search_volume_weights.sql
src/google_trends_etl/: __init__.py  config.py  country_search_volumes_main.py  country_weights.py  db.py  extract.py  extract_country_search_volumes.py  extract_search_volumes.py  load.py  load_country_search_volumes.py  main.py  migrate.py  search_volumes_main.py  telemetry.py  transform.py  transform_country_search_volumes.py  trendspy_support.py
tests/: test_country_search_volume_extract.py  test_google_trends_extract.py  test_search_volume_transforms.py  test_telemetry.py
