[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cds-proto-etl"
version = "0.1.0"
description = "Point-in-time Google Trends ETL snapshots into PostgreSQL."
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "trendspy==0.1.6",
    # IANA tz database for zoneinfo on platforms without a system copy
    # (Windows, slim Docker images).
    "tzdata>=2024.1",
]

[project.scripts]
google-trends-etl = "google_trends_etl.main:main"
google-trends-migrate = "google_trends_etl.migrate:main"
google-search-volumes-etl = "google_trends_etl.search_volumes_main:main"
google-country-search-volumes-etl = "google_trends_etl.country_search_volumes_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/google_trends_etl"]
